<resources>
    <string name="app_name">App1</string>

    <string name="nombre_app">
        SAMPLE  TEXT
    </string>

    <string name="creditos_equipoDesarrollador">
        An app By team
    </string>

    <string name="preguntaUsuario">
        ¿Eres un nuevo usuario?
    </string>

    <string name="preguntaContrasena">
        ¿Olvidaste tu contraseña?
    </string>

    <string name="botonRegistrar">
        REGISTRATE
    </string>

    <string name="enunciadoIniciar">
        ¿Ya tienes una cuenta?
    </string>

    <string name="botonIniciar">
        INICIA SESION
    </string>

    <string name="hintNombre">
        Introduce tu Nombre
    </string>

    <string name="hintApellido">
        Introduce tus Apellidos
    </string>

    <string name="hintTelefono">
        Ingresa tu numero de telefono
    </string>

    <string name="hintContrasena">
        Introduce tu contraseña
    </string>

    <string name="hintContrasena2">
        Confirma tu contraseña
    </string>

    <string name="hintCorreo">
        Introduce tu correo electronico
    </string>

    <string name="enunciadoCodigo">
        Ingresa el código que te enviamos
    </string>

    <string name="enunciadoNoCodigo">
        No tengo un código
    </string>

    <string name="botonValidar">
        VALIDAR
    </string>

    <string name="botonRecuperar">
        RECUPERAR
    </string>

    <string name="botonCambiar">
        CAMBIAR
    </string>

    <string name="mensajito">
        Hola
    </string>

    <string name="mensajito2">
        :3
    </string>

    <string name="hintOrigen">
        Introduce tu dirección
    </string>

    <string name="hintDestino">
        Introduce el destino
    </string>

    <string name="title_activity_mapa">
        Map
    </string>

    <string name="botonSolicitar">
        SOLICITAR
    </string>


</resources>
