<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg_color"

    >

    <!--
  Font family: Another Danger - Demo
  Line height: 72sp
-->
    <!-- styles.xml -->

    <ImageView
        android:id="@+id/logo"
        android:alpha="1"
        android:layout_width="151dp"
        android:layout_height="146dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="127dp"
        android:layout_marginRight="127dp"
        app:srcCompat="@android:drawable/ic_delete" />



    <me.itangqi.waveloadingview.WaveLoadingView
        android:id="@+id/wave"
        android:layout_width="wrap_content"
        android:layout_height="113dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"

        android:layout_centerHorizontal="true"
        android:layout_marginStart="-1dp"
        android:layout_marginBottom="1dp"
        app:wlv_borderColor="@color/colorAccent"
        app:wlv_borderWidth="0dp"
        app:wlv_progressValue="60"
        app:wlv_round_rectangle="false"
        app:wlv_shapeType="rectangle"
        app:wlv_titleTop=""
        app:wlv_titleTopColor="@android:color/white"
        app:wlv_titleTopSize="24sp"
        app:wlv_titleTopStrokeColor="@android:color/holo_blue_dark"
        app:wlv_titleTopStrokeWidth="3dp"
        app:wlv_triangle_direction="north"
        app:wlv_waveAmplitude="128"
        android:alpha="0.8"
        app:wlv_waveColor="#00FFFF" />

    <ImageView
        android:id="@+id/blurScreen"
        android:layout_width="409dp"
        android:layout_height="731dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="-2dp"
        android:layout_marginEnd="0dp"
        android:alpha="0.7"
        android:background="@drawable/bg_color" />

    <EditText
        android:id="@+id/textFieldTelefonoLada"
        android:layout_width="52dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="78dp"
        android:background="@drawable/textfield" />

    <TextView
        android:layout_width="272dp"
        android:layout_height="34dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="-15dp"
        android:layout_marginLeft="-15dp"
        android:layout_marginTop="117dp"
        android:gravity="center"
        android:text="@string/hintContrasena"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/textFieldTelefono"
        android:layout_width="278dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="93dp"
        android:layout_marginTop="78dp"
        android:background="@drawable/textfield" />

    <TextView
        android:layout_width="267dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="43dp"
        android:gravity="center"
        android:text="@string/hintTelefono"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/textFieldContrasena"
        android:layout_width="339dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="156dp"
        android:background="@drawable/textfield" />

    <Button
        android:id="@+id/botonRegistrar"
        android:layout_width="160dp"
        android:layout_height="58dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/roundbutton"
        android:backgroundTint="#3E5286"
        android:fontFamily="@font/secular_one"
        android:text="@string/botonRegistrar"
        android:textColor="#FFFFFF"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/preguntaUsuario"
        android:layout_width="251dp"
        android:layout_height="44dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="527dp"
        android:gravity="center"
        android:text="@string/preguntaUsuario"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="22sp" />

    <TextView
        android:clickable="true"
        android:id="@+id/preguntaContrasena"
        android:layout_width="282dp"
        android:layout_height="43dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="268dp"
        android:gravity="center"
        android:text="@string/preguntaContrasena"
        android:textAlignment="center"
        android:textColor="#3E5286"
        android:textSize="22sp" />

    <Button
        android:id="@+id/botonIniciar"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="109dp"
        android:layout_marginBottom="390dp"
        android:background="@drawable/roundbutton"
        android:backgroundTint="#2AA3C9"
        android:fontFamily="@font/secular_one"

        android:text="@string/botonIniciar"
        android:textColor="#FFFFFF"
        android:textSize="22dp" />


</RelativeLayout>